# invenio-previewer-cmdi

./: MANIFEST.in  README.md  pyproject.toml
invenio_previewer_cmdi/: __init__.py  config.py  ext.py  views.py
invenio_previewer_cmdi/extensions/: cmdi.py
invenio_previewer_cmdi/static/xsl/: CMDI2HTML-merged.xsl  simple.xsl
tests/: conftest.py  test_invenio_previewer_cmdi.py
tests/resources/: metadata.cmdi
