[build-system]
requires = ["setuptools>=61.0", "invenio-previewer>=1.3.9", "lxml>=4.9.2", "requests>=2.28.2"]
build-backend = "setuptools.build_meta"

[project]
name = "invenio_previewer_cmdi"
version = "0.0.1"
authors = [
  { name="Herbert Lange", email="lange@ids-mannheim.de" },
]
description = "Previewer for CMDI files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[project.entry-points."invenio_base.apps"]
invenio_previewer_cmdi = "invenio_previewer_cmdi:InvenioPreviewerCMDI"
[project.entry-points."invenio_base.blueprints"]
invenio_previewer_cmdi = "invenio_previewer_cmdi.views:blueprint"
[project.entry-points."invenio_config.module"]
invenio_previewer_cmdi = "invenio_previewer_cmdi.config"
[project.entry-points."invenio_previewer.previewers"]
invenio_previewer_cmdi = "invenio_previewer_cmdi.extensions.cmdi"